@@ -288,6 +288,7 @@ exportMethods(## for both own and "other" generics:
 	      "tcrossprod",
 	      "tril",
 	      "triu",
+              "unname",
               "update",
 	      "zapsmall"
 	      )
