@@ -74,13 +74,10 @@
   specifically for multiplying a cholmod_sparse object by a diagonal matrix.
   Use it in %*% and [t]crossprod methods.
 
-- chol() and determinant() should ``work'': proper result or "good" error
-  message.
+- chol() should ``work'': proper result or "good" error message.
 
 - make sure *all* group methods have (maybe "bail-out") setMethod for "Matrix".
   e.g. zapsmall(<pMatrix>) fails "badly"
-
-- sum(): implement methods which work for *all* our matrices.
 
 - Implement  expand(.) for the Cholesky() results
   "dCHMsimpl" and  "dCHMsuper"  -- currently have no *decent* way to get at
@@ -99,16 +96,9 @@
   --> R/diagMatrix.R ('FIXME')
   but also R/Ops.R  to ensure  sp-sym. + sp-sym. |-> sp-sym.  etc
 
-- Diagonal(n) %*% A ---  too slow!! --> ~/R/MM/Pkg-ex/Matrix/diag-Tamas-ex.R
-
 - ! <symmetricMatrix>  loses symmetry, both for dense and sparse matrices.
   !M  where M is "sparseMatrix", currently always gives dense. This only
   makes sense when M is ``really sparse''.
-
-- msy <- as(matrix(c(2:1,1:2),2), "dsyMatrix"); str(msy)
-
-  shows that the Cholesky factorization is computed ``too quickly''.
-  Can be a big pain for largish matrices, when it is unneeded.
 
 - example(Cholesky, echo=FALSE) ; cm <- chol(mtm); str(cm); str(mtm)
 
